[gd_scene load_steps=6 format=3 uid="uid://c1h8ayx8wg63w"]

[ext_resource type="Texture2D" uid="uid://ep2x7tr7abhu" path="res://assets/ui/option_bg.svg" id="1_qs0jx"]
[ext_resource type="Script" path="res://scenes/ui/settings/toggle_option.gd" id="1_tpo8u"]
[ext_resource type="Texture2D" uid="uid://bssi4tojg14nl" path="res://assets/ui/toggle_off.svg" id="2_7nsl3"]
[ext_resource type="Texture2D" uid="uid://bup44s2h1g2wh" path="res://assets/ui/toggle_on.svg" id="2_naqs8"]

[sub_resource type="LabelSettings" id="LabelSettings_iqwf3"]
font_size = 24

[node name="Control" type="Control"]
custom_minimum_size = Vector2(450, 110)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
script = ExtResource("1_tpo8u")

[node name="ColorRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 15.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 0
texture = ExtResource("1_qs0jx")
patch_margin_left = 23
patch_margin_top = 24
patch_margin_right = 25
patch_margin_bottom = 22

[node name="Label" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 30.0
offset_top = -15.5
offset_right = 63.0
offset_bottom = 15.5
grow_vertical = 2
size_flags_horizontal = 3
text = "Toggle"
label_settings = SubResource("LabelSettings_iqwf3")
vertical_alignment = 1

[node name="CheckButton" type="TextureButton" parent="ColorRect"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -123.0
offset_top = -30.0
offset_right = -27.0
offset_bottom = 30.0
grow_horizontal = 0
grow_vertical = 2
toggle_mode = true
texture_normal = ExtResource("2_7nsl3")
texture_pressed = ExtResource("2_naqs8")
stretch_mode = 3

[connection signal="toggled" from="ColorRect/CheckButton" to="." method="_on_check_buttons_toggled"]
